# hypr-profile

./: .gitignore  Cargo.toml  README.md
package-builder/: PKGBUILD  build.sh
src/: environment_string_replace.rs  hypr_config.rs  hypr_locations.rs  main.rs
