[package]
name = "hypr-profile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = "4.5.7"
env_logger = "0.11.3"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
log = "0.4.21"


[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
